@@ -1,3 +1,9 @@
+2007-07-06  Akim Demaille  <demaille@gostai.com>
+
+	Make hash table simpler to use
+	* hash.hh: Don't define libport::hash_map_type, just use
+	using to import hash_map into libport.
+
 2007-05-25  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
 
 	Add missing include.
@@ -16,14 +22,14 @@
 
 2007-04-10  POTHIER Benoit  <pothier@gostai.com>
 
-	Be more verbose in semaphores. Fix windows return values.  
+	Be more verbose in semaphores. Fix windows return values.
 	* exception.hh: Add libport namespace.
 	* exception.hxx: Same.
 	* semaphore.hxx: Fix return values and add disnostic messages.
 
 2007-04-10  POTHIER Benoit  <pothier@gostai.com>
 
-	Fix windows compilation. 
+	Fix windows compilation.
 	* libport.mk: Add missing exception headers.
 	* semaphore.hxx: Fix string use.
 
